# pastas-wv2030

./: app.py  old_app.py  pyproject.toml  test_plotly.py  todo.prompt.md
.github/: test.prompt.md
app_UI/: __init__.py  app.py  config.py  utils.py
app_UI/tabs/: __init__.py  kalibratie.py  meetreeksen.py  model_vergelijkingen.py  series.py  terugkeertijden.py
input_files/input_beemster/: BE0049_00_BIKR_GMW_PB1_F-227.xlsx  BE0049_00_BIT_GMW_PB1_F-550.xlsx  BE0049_00_BIT_GMW_PB2_F-930.xlsx  BE0049_00_BIT_GMW_PB2_F-930_EDIT.xlsx  BE0049_00_BUKR_GMW_PB1_F-229.xlsx  (+14 more)
notebooks/: 13_HB21_PB1.ipynb  13_HB21_PB1_tarso.ipynb  DATA_FUGRO_to_csv.ipynb  DATA_RESAMPLE_csv_to_daily_mean.ipynb  DATA_data_pull.ipynb  F229_Beemster.ipynb  Filter_compare_local_knmi.ipynb  Filter_geoloket_csv_creator.ipynb  Filter_html_plots_avg.ipynb  Filter_html_plots_median.ipynb  Filter_inspecteer_raw_batch_geoloket.ipynb  KNMI_data_pull.ipynb  MONTECARLO_Entire_Batch.ipynb  MONTECARLO_Test_Batch.ipynb  Model_13_HB28_PB1.ipynb  Model_13_HB29_PB1_copy.ipynb  Model_Monte_Carlo.ipynb  Monte_Carlo.ipynb  Monte_Carlo_Entire_Batch.ipynb  Monte_Carlo_stressor.ipynb  PLOT_html_plots_avg.ipynb  Test_phreatic_line_simulator.ipynb  compare_local_knmi.ipynb  csv_knmi_plotter.ipynb  inspecteer_raw_batch_geoloket.ipynb  new_file.ipynb  non_linear_analysis.ipynb  resample_to_daily_mean.ipynb  test_notebook.ipynb
output_files/: data_validation.xlsx  diagnostics_df_249_24072025.xlsx  model_results_monte_carlo.xlsx  results_df.csv  results_df_KNMI_249_24072025.xlsx
scripts/: knmi_pull.py
(+699 files in other folders)
