[tool.poetry]
name = "pastas-wv2030"
version = "0.1.0"
description = "Notebooks and data to run simple Pastas models"
authors = ["Jeroen van Ruitenbeek"]
license = "/"
readme = "README.md"
packages = [{ include = "pastas_wv2030" }]

[tool.poetry.dependencies]
python = ">=3.12"
pastas = "^1.9.0"
requests = "^2.32.4"
openpyxl = "^3.1.5"
lmfit = "^1.3.3"
seaborn = "^0.13.2"
emcee = "^3.1.6"
plotly = "^6.1.2"
nbformat = "^5.10.4"
streamlit = "^1.46.1"
pandas = "*"
numpy = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
